--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.3.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "vite": "^2.8.0",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.14"
